# ClaudeViewer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Processing.md  agent.md  build.ps1  run_viewer.ps1
doc/: 00-SchematicEngine技术方案.md  01-code-style-and-version-control.md  02-architecture-philosophy.md  03-cpp17-and-object-management.md  04-testing-benchmark-and-docs.md  05-exception-logging-and-compatibility.md  06-术语与类设计详解.md  技术总结.md
examples/: demo_circuit.json  demo_top.json
include/layout/: layout_info.h  layout_manager.h
include/model/: inst.h  net.h  obj.h  object_manager.h  pin.h
include/parser/: command_dispatcher.h  command_parser.h
include/view/: inst_graphics_item.h  inst_label_item.h  pin_graphics_item.h  schematic_scene.h  text_item.h
src/layout/: layout_info.cpp  layout_manager.cpp
src/model/: inst.cpp  net.cpp  obj.cpp  object_manager.cpp  pin.cpp
src/parser/: command_dispatcher.cpp  command_parser.cpp
src/view/: inst_graphics_item.cpp  inst_label_item.cpp  pin_graphics_item.cpp  schematic_scene.cpp  text_item.cpp
tests/: object_manager_tests.cpp
tools/: pipeline_cli.cpp  qt_viewer_main.cpp
